--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
           <!-- Level 2 'HAPPY' Header -->
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h6>PHARREL WILLIAMS</h6>
+          <h2>HAPPY</h2>
+          <h6>| FROM DESPICABLE ME 2 |</h6>
 
         </div>
       </div>
@@ -35,9 +38,19 @@
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
+        <h3>| FROM DESPICABLE ME 2 |</h3>
+
+        <h1>HAPPY</h1>
+        <h3>WRITTEN BY PHARRELL WILLIAMS </h3>
+        <P>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.
+        </P>
+        <span>PHARRELLWILLIAMS.COM</span>
+        <img src="images/columbia-logo.png" alt="colombia logo">
+        <span>COLOMBIARECORDS.COM</span>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="images/sony-logo.png" alt="sony logo">
 
       </div>
     </div>
